--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.32.0",
+    "@google/genai": "^1.41.0",
     "leaflet": "1.9.4",
     "lucide-react": "^0.559.0",
     "react": "^19.2.1",
@@ -25,5 +25,9 @@
     "tailwindcss": "^4.1.18",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
+  }
+  ,
+  "overrides": {
+    "fetch-blob": "^4.0.0"
   }
 }
